demo-web-static/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-web-static
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: demo-web-static
  template:
    metadata:
      labels:
        app: demo-web-static
    spec:
      containers:
      - image: thawatchaik/nginx-demo
        name: demo-web-static
        ports:
        - containerPort: 80
