demo-web-static/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-web-static
  namespace: develop
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "localhost" 
    http:
      paths:
      - path: /demo-web-static
        pathType: Prefix
        backend: 
          service:
            name: demo-web-static
            port:
              number: 80
